Fixed small spacing issue (formatting) & Deleted bold social media images option

--- a/style.css
+++ b/style.css
@@ -33,10 +33,6 @@
 	margin-left: 15px;
 }
 
-.temp {
-
-}
-
 .fa {
 	height:150px;
 	width:150px;
@@ -90,8 +86,6 @@
 	top:16px;
 	left:1273px;
 }
-
-
 
 body {
 	background-color: #FAFAFA;
